--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     color: #4F5665;
 }
 
-.intro__text--description, .intro__paragraph, .intro__text-bullet, .plan__title-description, .plan__description-paragraph, .plan__subscribe-description, .footer__logo-subtitle {
+.intro__text_description, .intro__paragraph, .intro__text-bullet, .plan__title-description, .plan__description-paragraph, .plan__subscribe-description, .footer__logo-subtitle {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -49,7 +49,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     color: #4F5665;
 }
 
-.intro__content--normaltext {
+.intro__content_normaltext {
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
@@ -57,7 +57,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     color: #4F5665;
 }
 
-.intro__content--text {
+.intro__content_text {
     font-style: normal;
     font-weight: bold;
     font-size: 25px;
@@ -99,7 +99,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     color: #AFB5C0;
 }
 
-.header__link {
+.header__link, .footer__link {
     font-style: normal;
     font-weight: normal;
     font-size: 16px;
@@ -153,7 +153,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     color: #F53838;
 }
 
-.button__oval--white {
+.button__oval_white {
     font-family: Rubik;
     font-style: normal;
     font-weight: 500;
@@ -167,7 +167,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     transition: all 1s;
 }
 
-.button__oval--white:hover {
+.button__oval_white:hover {
     color: #FFFFFF;
     background: #F53838;
     box-shadow: 0 5px 15px #F53855;
@@ -189,7 +189,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     box-shadow: 0 20px 50px rgba(245, 56, 56, 0.35);;
 }
 
-.button__oval--white-large {
+.button__oval_white-large {
     font-family: Rubik;
     font-style: normal;
     font-weight: 500;
@@ -203,7 +203,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     transition: all 1s;
 }
 
-.button__oval--white-large:hover {
+.button__oval_white-large:hover {
     color: #FFFFFF;
     background: #F53838;
     box-shadow: 0 5px 15px #F53855;
@@ -300,7 +300,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     margin-bottom: 20px;
 }
 
-.intro__text--description {
+.intro__text_description {
     margin-top: 0;
     margin-bottom: 60px;
 }
@@ -462,7 +462,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     justify-content: flex-end;
 }
 
-.plan__slider-card--red {
+.plan__slider-card_red {
     width: 400px;
     height: 230px;
     background: #FFFFFF;
@@ -471,7 +471,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     border-radius: 10px;
 }
 
-.plan__slider-card--white {
+.plan__slider-card_white {
     width: 400px;
     height: 230px;
     border: 2px solid #DDDDDD;
@@ -488,11 +488,11 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     margin: 30px 30px 20px 30px;
 }
 
-.plan__card-content--top-left {
+.plan__card-content_top-left {
     display: flex;
 }
 
-.plan__card-content--top-right{
+.plan__card-content_top-right{
     display: flex;
 }
 
@@ -579,7 +579,7 @@ h2, .intro__title-text, .plan__title-main, .plan__title-second, .plan__title-thi
     justify-content: space-between;
 }
 
-.header__link--title {
+.footer__link_title {
     margin-bottom: 20px;
 }
 
