--- a/css/media.css
+++ b/css/media.css
@@ -14,7 +14,7 @@
     }
     .intro__main {
         display: block;
-        margin-top: 50px;
+        margin: 50px 80px 0px 150px;
         text-align: center; 
     }
     .intro__image {
@@ -22,12 +22,17 @@
         align-items: center;
     }
     .intro__summary-wrapper {
-        max-width: 800px;
+        max-width: 300px;
+        height: 500px;
         width: 100%;
         margin-top: 50px;
     }
+    .intro__summary-flex {
+        flex-direction: column;
+        height: 400px;
+    }
     .line {
-        margin: 0 50px 0 50px;
+        display: none;
     }
     .intro__features {
         margin: 90px 0 0 0;
@@ -88,23 +93,18 @@
     .footer__list {
         display: none;
     }
-    .footer__icons {
-        display: none;
-    }
     .footer {
         margin: 40px 0 0 10px;
     }
 }
 
 @media screen and (max-width: 768px) {
+    body {
+        margin: 20px;
+    }
     .header__wrapper {
         max-width: 600px;
-    }
-    .button {
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
+        margin-bottom: 100px;
     }
     .button__oval_white {
         padding: 10px 40px 10px 40px; 
@@ -113,9 +113,9 @@
         margin: 10px 0 0 0;
     }
     .intro__main {
-        display: block;
-        margin-top: 50px;
-        text-align: center; 
+        width: 700px;
+        margin: 0 auto;
+        text-align: center;
     }
     .intro__image {
         margin-top: 150px;
@@ -125,9 +125,18 @@
         margin-bottom: 30px;
     }
     .intro__summary-wrapper {
-        max-width: 650px;
+        max-width: 300px;
+        height: 500px;
         width: 100%;
         margin-top: 50px;
+        margin-bottom: 50px;
+    }
+    .intro__text-flex {
+        margin-left: 80px;
+    }
+    .intro__summary-flex {
+        flex-direction: column;
+        height: 400px;
     }
     .line {
         margin: 0 30px 0 30px;
@@ -136,7 +145,10 @@
         display: none;
     }
     .intro__features {
-        margin-top: 50px;
+        display: block;
+        width: 700px;
+        margin: 0 auto;
+        text-align: center;
     }
     .intro__text {
         text-align: center;
@@ -150,9 +162,14 @@
     .plan__wrapper {
         margin: 0 10px 0 10px;
     }
+    .plan__cards {
+        flex-direction: column;
+        align-items: center;
+    }
     .plan__card {
         width: 220px;
         height: 400px;
+        margin-bottom: 20px;
     }
     .plan__description {
         display: none;
@@ -202,9 +219,6 @@
     .footer__list {
         display: none;
     }
-    .footer__icons {
-        display: none;
-    }
     .footer {
         margin: 40px 0 0 10px;
     }
@@ -230,4 +244,3 @@
     .button__signin {
         margin-right: 0px;
     } */
-}
