--- a/css/slider.css
+++ b/css/slider.css
@@ -1,4 +1,29 @@
 .swiper-container {
-    width: 900px;
-    height: 300px;
+    width: 100vw;
+    max-height: 400px;
+    padding: 4%;
+}
+
+.swiper-wrapper {
+    margin: 20px 0px;
+}
+
+.swiper-pagination {
+   width: 100%;
+   text-align: left;
+}
+
+.swiper-pagination-bullet {
+    width: 20px;
+    height: 20px;
+}
+.swiper-pagination-bullet-active {
+    background-color: red;
+    width: 40px;
+    height: 20px;
+    border-radius: 5px;
+}
+.swiper-button-next,
+.swiper-button-prev {
+    color: red;
 }
